--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -13,8 +13,8 @@
             min-height: 110px
         .form-group
             margin: 0
-        .form-group.row
-            flex-wrap: nowrap
+        // .form-group.row
+        //     flex-wrap: nowrap
         .form-row
             margin-bottom: 15px
         .result-row
@@ -24,3 +24,8 @@
         #dishes.ng-touched.ng-invalid,
         form.submitted #dishes.ng-invalid
             border: 1px solid red
+
+@media screen and ( min-width:  768px)
+    .form-container .form-group.row
+        flex-wrap: nowrap
+    
